// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`pages globalSettings should render correctly with some saved passenger types 1`] = `
<BaseLayout
  description="View and access your settings in one place."
  showNavigation={true}
  title="Operator Settings"
>
  <div
    className="govuk-width-container"
  >
    <main
      className="govuk-main-wrapper"
    >
      <div
        className="govuk-grid-row"
      >
        <div
          className="govuk-grid-column-one-quarter"
        >
          <SubNavigation />
        </div>
        <div
          className="govuk-grid-column-three-quarters"
        >
          <h1
            className="govuk-heading-m"
          >
            Settings overview
          </h1>
          <p
            className="govuk-body-m"
          >
            Operators may customise the following definitions relevant to their fares or choose to use default settings.
          </p>
          <hr
            className="govuk-section-break govuk-section-break--l govuk-section-break--visible"
          />
          <SettingOverview
            count={4}
            description="Define age range and required proof documents of your passengers as well as passenger groups"
            name="Passenger types"
          />
        </div>
      </div>
    </main>
  </div>
</BaseLayout>
`;

exports[`pages globalSettings should render correctly with zero saved passenger types 1`] = `
<BaseLayout
  description="View and access your settings in one place."
  showNavigation={true}
  title="Operator Settings"
>
  <div
    className="govuk-width-container"
  >
    <main
      className="govuk-main-wrapper"
    >
      <div
        className="govuk-grid-row"
      >
        <div
          className="govuk-grid-column-one-quarter"
        >
          <SubNavigation />
        </div>
        <div
          className="govuk-grid-column-three-quarters"
        >
          <h1
            className="govuk-heading-m"
          >
            Settings overview
          </h1>
          <p
            className="govuk-body-m"
          >
            Operators may customise the following definitions relevant to their fares or choose to use default settings.
          </p>
          <hr
            className="govuk-section-break govuk-section-break--l govuk-section-break--visible"
          />
          <SettingOverview
            count={0}
            description="Define age range and required proof documents of your passengers as well as passenger groups"
            name="Passenger types"
          />
        </div>
      </div>
    </main>
  </div>
</BaseLayout>
`;
